# dev_contain

./: .gitignore  Jenkinsfile  README.md  build-base.py  build-base.sh  build-dashing.sh  build-fedora-dev.sh  build-image-editing.sh  build-python-dev.sh  build-ros2-nightly.sh  build-ros2.sh  build.yaml  dev-contain.spec  inventory.yaml  pyproject.toml  run.py  run.sh  setup.py
debian/: build.bash  changelog  control  copyright  gbp.conf  rules
dev_contain/: attach.py  build.py  clean.py  common.py  dev_contain.py  hints.py  list.py  run.py  start.py  stop.py  version.py  version.yaml  vs.py
dev_contain/templates/devcontainer/: Dockerfile  devcontainer.json
entrypoints/: tmux.bash
ros2/: build-from-source.bash
rpm/: build.bash  dev-contain.spec
